enviromments/vee/qa/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-app-get-href-from-10-websites
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: kong
  rules:
  - host: kustomize.chamo.local 
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi-app-get-href-from-10-websites
              port:
                number: 80
